--- a/problems.Rmd
+++ b/problems.Rmd
@@ -4,7 +4,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-\newcommand\thena{⨾}
+\newcommand\thena{;}
 
 # Challenges {#problems}
 
@@ -96,7 +96,7 @@ Finally, there is also empirical evidence showing that people generally struggle
 
 #### Disjointness and bijections
 
-But even more fundamentally, disjointness is related to a structure which mathematicians have long considered natural: a [bijection](#functions) or one-to-one mapping [see e.g. @fong2019; @lawvere2009]. Specifically, if we take a set $S$, divide it into disjoint subsets, and then assign each subset a label, there will be a one-to-one mapping between the labels and the subsets (i.e. each label corresponds to an [equivalence class](#partition) on $S$). Practically, this means that we can go back and forth between the subsets and labels, without losing any information, and the converse does not hold when the subsets are non-disjoint.
+But even more fundamentally, disjointness is related to a structure which mathematicians have long considered natural: a [bijection](#functions) or one-to-one mapping [see e.g. @fong2019; @lawvere2009]. Specifically, if we take a set $S$, divide it into disjoint subsets, and then assign each subset a label, there will be a one-to-one mapping between the labels and the subsets (i.e. each label corresponds to an [equivalence class](#partitions) on $S$). Practically, this means that we can go back and forth between the subsets and labels, without losing any information, and the converse does not hold when the subsets are non-disjoint.
 
 This bijective property of dijsoint subsets may be particularly useful in data visualization, see Figure \@ref(fig:geoms-bijection). For instance, when drawing a barplot, if we divide our data into disjoint subsets and draw one bar corresponding to each part, then we can go back and forth between data subsets and bars (the function of identifying data subsets from bars is invertible). In plots where the objects are non-disjoint, this correspondence is broken: if we select the set of cases corresponding to a bar, there may be no way to identify the original bar from the cases alone.
 
@@ -180,7 +180,7 @@ In the two preceding sections, I have argued that it is generally desirable for 
 - Completeness: They should show the full data
 - Distinctness: Geometric objects should represent distinct subsets of data points
 
-These two features actually map onto two fundamental mathematical properties: [surjectivity](#Functions) and [disjointness](#Partitions). In turn, these two properties define a well-known mathematical structure: a [partition](#Partitions). Therefore, partitions offer a compelling model for structuring our plots. I propose the following definition of a *regular plot*:
+These two features actually map onto two fundamental mathematical properties: [surjectivity](#functions) and [disjointness](#partitions). In turn, these two properties define a well-known mathematical structure: a [partition](#partitions). Therefore, partitions offer a compelling model for structuring our plots. I propose the following definition of a *regular plot*:
 
 :::{.definition name="Regular plot"}
 Regular plot is a plot where the geometric objects within one layer represent a partition of the data, such that there is a bijection between these objects and (possibly aggregated) subsets of the original data.   
@@ -512,7 +512,7 @@ Let's briefly recap the key points so far. In section \@ref(partitioning), I adv
 
 Further, in Section \@ref(stacking-not-graphical), I demonstrated on the example \@ref(fig:grammar-barplot-maximums) that some "stackable" summary statistics have the property of preserving the part-whole relationships in the data hierarchy, whereas others do not. I have also and pointed to other researchers who have noted this problem. Additionally, I have argued that preserving these part-whole relationship in our visualizations is desirable, particularly when interaction is involved. They simplify certain interactive behaviors, make them more intuitive and "natural," and reduce the workload interactive data visualization systems need to do.
 
-Now it will be finally time to discuss what makes certain statistics stackable. To do this, I will need to use some concepts from category theory. These concepts are described in greater detail in the [Appendix: Mathematical Theory](#mathematical-theory) - the reader is advised to consult this section if they are unfamiliar with the material (links to appropriate sections will also be provided throughout the text). However, first, a quick note on the application of category theory in the data visualization literature.
+Now it will be finally time to discuss what makes certain statistics stackable. To do this, I will need to use some concepts from category theory. These concepts are described in greater detail in the [Appendix: Mathematical Theory](#math) - the reader is advised to consult this section if they are unfamiliar with the material (links to appropriate sections will also be provided throughout the text). However, first, a quick note on the application of category theory in the data visualization literature.
 
 #### Past applications of category theory to data visualization {#visualization-category-theory}
 
@@ -545,6 +545,8 @@ For example, the following is a diagram of a simple category with two objects an
 
 ```{r category-two1}
 #| echo: false
+#| out-width: "75%"
+#| fig-cap: "A category with two objects."
 knitr::include_graphics("./figures/category-two.png")
 ```
 
@@ -572,6 +574,7 @@ Further, this categorical definition allows us to describe the relationships in 
 ```{r barplot-preorder3}
 #| echo: false
 #| fig-cap: "A diagram of a part of the barplot/spineplot category, with all of the morphisms described explictly."
+#| out-width: "75%"
 knitr::include_graphics("./figures/barplot-preorder3.png") 
 ```
 
@@ -600,6 +603,7 @@ This second property of preserving composition can be described by the following
 ```{r functor}
 #| echo: false
 #| fig-cap: "A commutative diagram showing how a functor $F$ preserves associativity. $A$, $B$, $C$ are objects in category $\\mathcal{C}$, $F(A)$, $F(B)$, $F(C)$ are objects in category $\\mathcal{D}$, $f$ and $g$ are morphisms in $\\mathcal{C}$, and $F(F)$ and $F(g)$ are objects in $\\mathcal{D}$."
+#| out-width: "75%"
 knitr::include_graphics("./figures/functor.png")
 ```
 
@@ -777,7 +781,7 @@ is_monoid <- function(fn, e, x, y, z) {
 }
 
 string_concat <- function(x) paste0(x, collapse = "")
-l2_norm <- function(x) sqrt(sum(x^2)) # Aka euclidean norm/vector length
+l2_norm <- function(x) sqrt(sum(x^2)) # aka euclidean distance
 
 is_monoid(sum, 0, x, y, z)
 is_monoid(max, -Inf, x, y, z)
